# DarPlayer

./: README.md  local.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/best/darplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  DObserver.cpp  DObserver.h  FFDecode.cpp  FFDecode.h  FFDemux.cpp  FFDemux.h  FFPlayerBuilder.cpp  FFPlayerBuilder.h  IPlayer.cpp  IPlayer.h  IPlayerPorxy.cpp  IPlayerPorxy.h  XTexture.cpp  XTexture.h  darplayer-sdk.cpp
app/src/main/cpp/baseInterface/: BaseAudioPlay.cpp  BaseAudioPlay.h  BaseDecode.cpp  BaseDecode.h  BaseDemux.cpp  BaseDemux.h  BasePlayerBuilder.cpp  BasePlayerBuilder.h  BaseResample.cpp  BaseResample.h  BaseVideoView.cpp  BaseVideoView.h
app/src/main/cpp/beans/: BaseData.cpp  BaseData.h  DParameter.cpp  DParameter.h
app/src/main/cpp/moduleAudio/: FFResample.cpp  FFResample.h  SLAudioPlay.cpp  SLAudioPlay.h
app/src/main/cpp/moduleVideo/: FFVideoView.cpp  FFVideoView.h  GLVideoView.cpp  GLVideoView.h  XEGL.cpp  XEGL.h  XShader.cpp  XShader.h
app/src/main/cpp/tools/: Log.cpp  Log.h  Thread.cpp  Thread.h
app/src/main/java/com/best/darplayer/: DarPlayerView.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml  playeract.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/best/darplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
